cmake_minimum_required(VERSION 2.6)

# Solution(in VS) Name
project(Algorithms_DataStructures)

add_subdirectory(DFS_BFS)
add_subdirectory(KnightsTour)
add_subdirectory(RatInAMaze)
add_subdirectory(TopologicalSort)
add_subdirectory(Combinations)
add_subdirectory(StringRotation)
add_subdirectory(Heap)
add_subdirectory(BST)